{
  "version": 4,
  "terraform_version": "1.1.6",
  "serial": 367,
  "lineage": "7866c2f9-06e6-7a3e-537a-6a8b77dec333",
  "resources": [
    {
      "module": "module.aws-eks-accelerator-for-terraform.module.aws_eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:214067368354:security-group/sg-064910ba7e7ba5dc4",
            "description": "EKS cluster security group.",
            "egress": [],
            "id": "sg-064910ba7e7ba5dc4",
            "ingress": [],
            "name": "aws001-preprod-dev-eks20220315165124552900000007",
            "name_prefix": "aws001-preprod-dev-eks",
            "owner_id": "214067368354",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "aws001-preprod-dev-eks-eks_cluster_sg",
              "created-by": "Terraform v1.0.1",
              "environment": "preprod",
              "name": "aws001-preprod-dev-eks",
              "resource": "eks",
              "tenant": "aws001",
              "zone": "dev"
            },
            "tags_all": {
              "Name": "aws001-preprod-dev-eks-eks_cluster_sg",
              "created-by": "Terraform v1.0.1",
              "environment": "preprod",
              "name": "aws001-preprod-dev-eks",
              "resource": "eks",
              "tenant": "aws001",
              "zone": "dev"
            },
            "timeouts": null,
            "vpc_id": "vpc-0956d1b5833623678"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws_vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.aws-eks-accelerator-for-terraform.module.aws_eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "workers",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:214067368354:security-group/sg-0588b08364354075a",
            "description": "Security group for all nodes in the cluster.",
            "egress": [],
            "id": "sg-0588b08364354075a",
            "ingress": [],
            "name": "aws001-preprod-dev-eks20220315165124516700000006",
            "name_prefix": "aws001-preprod-dev-eks",
            "owner_id": "214067368354",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "aws001-preprod-dev-eks-eks_worker_sg",
              "created-by": "Terraform v1.0.1",
              "environment": "preprod",
              "kubernetes.io/cluster/aws001-preprod-dev-eks": "owned",
              "name": "aws001-preprod-dev-eks",
              "resource": "eks",
              "tenant": "aws001",
              "zone": "dev"
            },
            "tags_all": {
              "Name": "aws001-preprod-dev-eks-eks_worker_sg",
              "created-by": "Terraform v1.0.1",
              "environment": "preprod",
              "kubernetes.io/cluster/aws001-preprod-dev-eks": "owned",
              "name": "aws001-preprod-dev-eks",
              "resource": "eks",
              "tenant": "aws001",
              "zone": "dev"
            },
            "timeouts": null,
            "vpc_id": "vpc-0956d1b5833623678"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws_vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.aws-eks-accelerator-for-terraform.module.aws_eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster_egress_internet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow cluster egress access to the Internet.",
            "from_port": 0,
            "id": "sgrule-3810450128",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-064910ba7e7ba5dc4",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws-eks-accelerator-for-terraform.module.aws_eks.aws_security_group.cluster",
            "module.aws_vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.aws-eks-accelerator-for-terraform.module.aws_eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster_https_worker_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow pods to communicate with the EKS cluster API.",
            "from_port": 443,
            "id": "sgrule-1535761427",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-064910ba7e7ba5dc4",
            "self": false,
            "source_security_group_id": "sg-0588b08364354075a",
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws-eks-accelerator-for-terraform.module.aws_eks.aws_security_group.cluster",
            "module.aws-eks-accelerator-for-terraform.module.aws_eks.aws_security_group.workers",
            "module.aws_vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.aws-eks-accelerator-for-terraform.module.aws_eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_egress_internet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow nodes all egress to the Internet.",
            "from_port": 0,
            "id": "sgrule-363507075",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0588b08364354075a",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws-eks-accelerator-for-terraform.module.aws_eks.aws_security_group.workers",
            "module.aws_vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.aws-eks-accelerator-for-terraform.module.aws_eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_ingress_cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow workers pods to receive communication from the cluster control plane.",
            "from_port": 1025,
            "id": "sgrule-1541765024",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0588b08364354075a",
            "self": false,
            "source_security_group_id": "sg-064910ba7e7ba5dc4",
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws-eks-accelerator-for-terraform.module.aws_eks.aws_security_group.cluster",
            "module.aws-eks-accelerator-for-terraform.module.aws_eks.aws_security_group.workers",
            "module.aws_vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.aws-eks-accelerator-for-terraform.module.aws_eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_ingress_cluster_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow pods running extension API servers on port 443 to receive communication from cluster control plane.",
            "from_port": 443,
            "id": "sgrule-34946739",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0588b08364354075a",
            "self": false,
            "source_security_group_id": "sg-064910ba7e7ba5dc4",
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws-eks-accelerator-for-terraform.module.aws_eks.aws_security_group.cluster",
            "module.aws-eks-accelerator-for-terraform.module.aws_eks.aws_security_group.workers",
            "module.aws_vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.aws-eks-accelerator-for-terraform.module.aws_eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_ingress_self",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow node to communicate with each other.",
            "from_port": 0,
            "id": "sgrule-1384729629",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0588b08364354075a",
            "self": false,
            "source_security_group_id": "sg-0588b08364354075a",
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws-eks-accelerator-for-terraform.module.aws_eks.aws_security_group.workers",
            "module.aws_vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.aws_vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-014f561619704e017",
            "domain": "vpc",
            "id": "eipalloc-014f561619704e017",
            "network_border_group": "ap-southeast-1",
            "public_dns": "ec2-18-142-39-215.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "18.142.39.215",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "aws001-preprod-dev-vpc-ap-southeast-1a"
            },
            "tags_all": {
              "Name": "aws001-preprod-dev-vpc-ap-southeast-1a"
            },
            "vpc": true
          },
          "dependencies": [
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.aws_vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:214067368354:internet-gateway/igw-018119d2dc208a45e",
            "id": "igw-018119d2dc208a45e",
            "owner_id": "214067368354",
            "tags": {
              "Name": "aws001-preprod-dev-vpc"
            },
            "tags_all": {
              "Name": "aws001-preprod-dev-vpc"
            },
            "vpc_id": "vpc-0956d1b5833623678"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.aws_vpc.aws_vpc.this",
            "module.aws_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.aws_vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-014f561619704e017",
            "connectivity_type": "public",
            "id": "nat-078c0ca15e59818cb",
            "network_interface_id": "eni-0288e925459061c3c",
            "private_ip": "10.0.0.23",
            "public_ip": "18.142.39.215",
            "subnet_id": "subnet-06ba52f7be47af5cd",
            "tags": {
              "Name": "aws001-preprod-dev-vpc-ap-southeast-1a"
            },
            "tags_all": {
              "Name": "aws001-preprod-dev-vpc-ap-southeast-1a"
            }
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.aws_vpc.aws_eip.nat",
            "module.aws_vpc.aws_internet_gateway.this",
            "module.aws_vpc.aws_subnet.public",
            "module.aws_vpc.aws_vpc.this",
            "module.aws_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.aws_vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-039a9c96552adf47b1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-078c0ca15e59818cb",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-039a9c96552adf47b",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.aws_vpc.aws_eip.nat",
            "module.aws_vpc.aws_internet_gateway.this",
            "module.aws_vpc.aws_nat_gateway.this",
            "module.aws_vpc.aws_route_table.private",
            "module.aws_vpc.aws_subnet.public",
            "module.aws_vpc.aws_vpc.this",
            "module.aws_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.aws_vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-018119d2dc208a45e",
            "id": "r-rtb-0ab8e35dad1e487391080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0ab8e35dad1e48739",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.aws_vpc.aws_internet_gateway.this",
            "module.aws_vpc.aws_route_table.public",
            "module.aws_vpc.aws_vpc.this",
            "module.aws_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.aws_vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:214067368354:route-table/rtb-039a9c96552adf47b",
            "id": "rtb-039a9c96552adf47b",
            "owner_id": "214067368354",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "aws001-preprod-dev-vpc-private"
            },
            "tags_all": {
              "Name": "aws001-preprod-dev-vpc-private"
            },
            "timeouts": null,
            "vpc_id": "vpc-0956d1b5833623678"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.aws_vpc.aws_vpc.this",
            "module.aws_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.aws_vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:214067368354:route-table/rtb-0ab8e35dad1e48739",
            "id": "rtb-0ab8e35dad1e48739",
            "owner_id": "214067368354",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "aws001-preprod-dev-vpc-public"
            },
            "tags_all": {
              "Name": "aws001-preprod-dev-vpc-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0956d1b5833623678"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.aws_vpc.aws_vpc.this",
            "module.aws_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.aws_vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c094173423105a37",
            "route_table_id": "rtb-039a9c96552adf47b",
            "subnet_id": "subnet-0d9e3048b9235cdf1"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.aws_vpc.aws_route_table.private",
            "module.aws_vpc.aws_subnet.private",
            "module.aws_vpc.aws_vpc.this",
            "module.aws_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a573ed37c1c7817a",
            "route_table_id": "rtb-039a9c96552adf47b",
            "subnet_id": "subnet-07f7869dc4bf22f04"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.aws_vpc.aws_route_table.private",
            "module.aws_vpc.aws_subnet.private",
            "module.aws_vpc.aws_vpc.this",
            "module.aws_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d44e3487fd8bfe81",
            "route_table_id": "rtb-039a9c96552adf47b",
            "subnet_id": "subnet-02c53631fed085133"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.aws_vpc.aws_route_table.private",
            "module.aws_vpc.aws_subnet.private",
            "module.aws_vpc.aws_vpc.this",
            "module.aws_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.aws_vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d64410a4ac9325b9",
            "route_table_id": "rtb-0ab8e35dad1e48739",
            "subnet_id": "subnet-06ba52f7be47af5cd"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.aws_vpc.aws_route_table.public",
            "module.aws_vpc.aws_subnet.public",
            "module.aws_vpc.aws_vpc.this",
            "module.aws_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e27703c35a24ed57",
            "route_table_id": "rtb-0ab8e35dad1e48739",
            "subnet_id": "subnet-0ef5b1155d158140d"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.aws_vpc.aws_route_table.public",
            "module.aws_vpc.aws_subnet.public",
            "module.aws_vpc.aws_vpc.this",
            "module.aws_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0187afd663b8f43e4",
            "route_table_id": "rtb-0ab8e35dad1e48739",
            "subnet_id": "subnet-01ce720c9382796c8"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.aws_vpc.aws_route_table.public",
            "module.aws_vpc.aws_subnet.public",
            "module.aws_vpc.aws_vpc.this",
            "module.aws_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.aws_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:214067368354:subnet/subnet-0d9e3048b9235cdf1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d9e3048b9235cdf1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "214067368354",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "aws001-preprod-dev-vpc-private-ap-southeast-1a",
              "kubernetes.io/cluster/aws001-preprod-dev-eks": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "aws001-preprod-dev-vpc-private-ap-southeast-1a",
              "kubernetes.io/cluster/aws001-preprod-dev-eks": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0956d1b5833623678"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.aws_vpc.aws_vpc.this",
            "module.aws_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:214067368354:subnet/subnet-07f7869dc4bf22f04",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07f7869dc4bf22f04",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "214067368354",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "aws001-preprod-dev-vpc-private-ap-southeast-1b",
              "kubernetes.io/cluster/aws001-preprod-dev-eks": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "aws001-preprod-dev-vpc-private-ap-southeast-1b",
              "kubernetes.io/cluster/aws001-preprod-dev-eks": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0956d1b5833623678"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.aws_vpc.aws_vpc.this",
            "module.aws_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:214067368354:subnet/subnet-02c53631fed085133",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1c",
            "availability_zone_id": "apse1-az3",
            "cidr_block": "10.0.12.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02c53631fed085133",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "214067368354",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "aws001-preprod-dev-vpc-private-ap-southeast-1c",
              "kubernetes.io/cluster/aws001-preprod-dev-eks": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "aws001-preprod-dev-vpc-private-ap-southeast-1c",
              "kubernetes.io/cluster/aws001-preprod-dev-eks": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0956d1b5833623678"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.aws_vpc.aws_vpc.this",
            "module.aws_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.aws_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:214067368354:subnet/subnet-06ba52f7be47af5cd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06ba52f7be47af5cd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "214067368354",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "aws001-preprod-dev-vpc-public-ap-southeast-1a",
              "kubernetes.io/cluster/aws001-preprod-dev-eks": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "aws001-preprod-dev-vpc-public-ap-southeast-1a",
              "kubernetes.io/cluster/aws001-preprod-dev-eks": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0956d1b5833623678"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.aws_vpc.aws_vpc.this",
            "module.aws_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:214067368354:subnet/subnet-0ef5b1155d158140d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ef5b1155d158140d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "214067368354",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "aws001-preprod-dev-vpc-public-ap-southeast-1b",
              "kubernetes.io/cluster/aws001-preprod-dev-eks": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "aws001-preprod-dev-vpc-public-ap-southeast-1b",
              "kubernetes.io/cluster/aws001-preprod-dev-eks": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0956d1b5833623678"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.aws_vpc.aws_vpc.this",
            "module.aws_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:214067368354:subnet/subnet-01ce720c9382796c8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1c",
            "availability_zone_id": "apse1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01ce720c9382796c8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "214067368354",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "aws001-preprod-dev-vpc-public-ap-southeast-1c",
              "kubernetes.io/cluster/aws001-preprod-dev-eks": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "aws001-preprod-dev-vpc-public-ap-southeast-1c",
              "kubernetes.io/cluster/aws001-preprod-dev-eks": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0956d1b5833623678"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.aws_vpc.aws_vpc.this",
            "module.aws_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.aws_vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:214067368354:vpc/vpc-0956d1b5833623678",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-04b13cf1ac06e7612",
            "default_route_table_id": "rtb-0871a6f9c74f37998",
            "default_security_group_id": "sg-0dc7f33cab40d794e",
            "dhcp_options_id": "dopt-b9488ddf",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0956d1b5833623678",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0871a6f9c74f37998",
            "owner_id": "214067368354",
            "tags": {
              "Name": "aws001-preprod-dev-vpc"
            },
            "tags_all": {
              "Name": "aws001-preprod-dev-vpc"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}